--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: "3.8"
 
 services:
   mysqldb:
+    container_name: mysqldb
     image: mysql:8
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=
       - MYSQL_DATABASE=stationSki
     networks:
       - springapimysql-net  
@@ -14,9 +15,12 @@ services:
     volumes:
       - db:/var/lib/mysql
   app:
+    container_name: app
     depends_on:
       - mysqldb
     build: .
+      #context: ./
+      #dockerfile: Dockerfile
     restart: on-failure
     networks:
       - springapimysql-net
@@ -32,3 +36,4 @@ volumes:
 
 networks:
   springapimysql-net:
+    driver: bridge
