--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/stationSki
 server.port=8089
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/stationSki
+spring.datasource.url=jdbc:mysql://localhost:3306/stationSki?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
@@ -15,6 +15,8 @@ spring.main.allow-bean-definition-overriding=true
 #logging configuration
 logging.level.com.zaxxer.hikari=warn
 logging.level.org.springframework=warn
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
 
 
 
