--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,18 @@
     </build>
 
          <profiles>
+         <profile>
+      <id>sonar</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+         <properties>
+             <sonar.host.url>http://192.168.10.21:9000</sonar.host.url>
+         </properties>
+
+  </profile>
+
+                  
     <profile>
       <id>coverage</id>
       <activation>
