--- a/pom.xml
+++ b/pom.xml
@@ -145,13 +145,14 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                             <phase>test-compile</phase>
                     </execution>
                     <execution>
-                        <id>
-                            report</id>
+                        <id>report</id>
                         <goals>
                             <goal>report</goal>
                         </goals>
+                           <phase>test</phase>
                     </execution>
                 </executions>
             </plugin>
