--- a/pom.xml
+++ b/pom.xml
@@ -163,13 +163,30 @@
                         </goals>
                     </execution>
                     <execution>
-                        <id>
-                            report</id>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <dataFile>target/jacoco.exec</dataFile>
+
+                            <outputDirectory>target/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
                 </executions>
+            <configuration>
+                <systemPropertyVariables>
+                <jacoco-agent.destfile>jacoco.exec</jacoco-agent.destfile>
+                </systemPropertyVariables>
+            </configuration>
             </plugin>
 
             <plugin>
