--- a/pom.xml
+++ b/pom.xml
@@ -182,11 +182,11 @@
                         </configuration>
                     </execution>
                 </executions>
-            <configuration>
-                <systemPropertyVariables>
-                <jacoco-agent.destfile>jacoco.exec</jacoco-agent.destfile>
-                </systemPropertyVariables>
-            </configuration>
+                  <configuration>
+                         <systemPropertyVariables>
+                         <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
+                         </systemPropertyVariables>
+                  </configuration>
             </plugin>
 
             <plugin>
