--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.exclusions>**/StationSkiApplication.java</sonar.exclusions>
     </properties>
     <dependencies>
         <dependency>
