--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                         <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                     </systemPropertyVariables>
                             <excludes>
-                                <exclude>**/entities/Moniteur.*</exclude>
+                                <exclude>src/main/java/com/example/stationski/entities/*.class</exclude>
                             </excludes>
                 </configuration>
             </plugin>
