--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.exclusions>**/StationSkiApplication.java</sonar.exclusions>
+        <sonar.exclusions>**/entities/MoniteurDTO.java</sonar.exclusions>
     </properties>
     <dependencies>
         <dependency>
@@ -188,9 +189,6 @@
                     <systemPropertyVariables>
                         <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                     </systemPropertyVariables>
-                            <excludes>
-                                <exclude>src/main/java/com/example/stationski/entities/*.class</exclude>
-                            </excludes>
                 </configuration>
             </plugin>
 
