--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - springapimysql-net
     ports:
       - 8089:8089
-    volumes:
-      - .m2:/root/.m2
+        #    volumes:
+        #      - .m2:/root/.m2
     stdin_open: true
     tty: true
 
