--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 
 services:
   mysqldb:
@@ -9,7 +9,7 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=stationSki
     networks:
-      - springapimysql-net  
+      - springapimysql-net
     ports:
       - 3306:3306
     volumes:
@@ -18,7 +18,8 @@ services:
     container_name: app
     depends_on:
       - mysqldb
-    build: 
+    build:
+      context: .
       dockerfile: Dockerfile
     restart: on-failure
     networks:
