--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,18 @@
         </dependency>
 
     </dependencies>
-
+         
+<repository>
+  <id>ybensalha</id>
+  <url>https://pkgs.dev.azure.com/ybensalha/_packaging/ybensalha/maven/v1</url>
+  <releases>
+    <enabled>true</enabled>
+  </releases>
+  <snapshots>
+    <enabled>true</enabled>
+  </snapshots>
+</repository>
+         
     <build>
         <plugins>
         <plugin>
